--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
+/*
+Base Pallete
+#E0E2DB Background All
+#D2D4C8 Background Offset
+#B8BDB5 Open
+#889696 Cards and Modals
+#5F7470 Background Invert
+Application Pallette
+#223843 Text Dark
+#3F5E5A Button Passive / navlink
+#EFF1F3 Text Light
+#DBD3D8 Open
+#D8B4A0 Breadcrumb / Nav
+#D77A61 Button Active
+*/
+
+/*
+// Interactive
+.oxygen-mono-regular {
+  font-family: "Oxygen Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+// Passive / Informative
+  font-family: "Raleway", sans-serif;
+*/
+* {
+  list-style-type: none;
+}
+body {
+  font-family: 'oxygen-mono-regular', monospace;
+  background-color: #E0E2DB;
+  background-color: #fefefe;
+  color: #223843;
+  list-style-type: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* body {
+    font-family:'Oxygen Mono', monospace 'Open Sans', sans-serif;
+} */
+
+/* .card-img-overlay .card-title {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+} */
+
+.row-content {
+    padding: 50px 0;
+    border-bottom: 1px ridge;
+    min-height: 200px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* .site-footer {
+    background-image: linear-gradient(#cec8ff, white);
+    padding: 20px 0;
+    margin-top: 2rem;
+} */
+
+.navbar-brand {
+    background-color: #5F7470;
+    color: #EFF1F3;
+    /* color: #D77A61; */
+    max-width: 4rem;
+    margin-right: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-brand img {
+    width: 100%;
+    height: 100%;
+    margin-right: 2rem;
+    max-width: 4rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.navbar-dark {
+    background-color: #5F7470;
+    color: #EFF1F3;
+    margin-bottom: 2rem;
+    min-height: 6rem;
+    /* padding-left: .5rem; */
 }
+a {
+  text-decoration: none;
+}
+a.nav-link {
+    color: #D8B4A0;
+}
+a:hover {
+    color: #223843;
+}
+a.nav-link.active {
+    color: #D77A61
+}
+
+/*
+.page-enter {
+    opacity: 0;
+    transform: translateX(-100%);
+}
+
+.page-enter-active {
+    opacity: 1;
+    transform: translateX(0%);
+    transition: 300ms ease-out;
+}
+
+.page-exit {
+    opacity: 1;
+}
+
+.page-exit-active {
+    opacity: 0;
+    transition: 300ms ease-in;
+}
+*/
